<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.ayaavdews.appsistatib.Fragment.FragmentProfileGuru"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile_guru" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.ayaavdews.appsistatib.Fragment.FragmentDashboard"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_tatib"
        android:name="com.ayaavdews.appsistatib.Fragment.FragmentTatib"
        android:label="@string/title_tatib"
        tools:layout="@layout/fragment_tatib" />
</navigation>