<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.ayaavdews.appsistatib.Fragment.FragmentProfileSiswa"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile_siswa" />

    <fragment
        android:id="@+id/navigation_peraturan"
        android:name="com.ayaavdews.appsistatib.Fragment.FragmentPeraturan"
        android:label="@string/title_peraturan"
        tools:layout="@layout/fragment_peraturan" />

    <fragment
        android:id="@+id/navigation_siswa"
        android:name="com.ayaavdews.appsistatib.Fragment.FragmentPelajar"
        android:label="@string/title_siswa"
        tools:layout="@layout/fragment_pelajar" />
</navigation>